--- a/project/.env.sample
+++ b/project/.env.sample
@@ -1,12 +1,12 @@
-SECRET_KEY=put-real-secret-key-here
+SECRET_KEY=0=ly)vyn^)h+x4+h_zg!%uayin#y9au_&2y%z&^s8ms(tg#t7=
 DEBUG=True
 
-ALLOWED_HOSTS=localhost,127.0.0.1,0.0.0.0
+ALLOWED_HOSTS=localhost,127.0.0.1,0.0.0.0,api-8-magic-balls.herokuapp.com
 ALLOW_ALL_ORIGINS=True
 
-#DATABASE_ENGINE=django.db.backends.postgresql
-#DATABASE_NAME=postgres
-#DATABASE_USER=postgres
-#DATABASE_PASSWORD=put-real-db-password-here
-#DATABASE_HOST=db
-#DATABASE_PORT=5432
+DATABASE_ENGINE=django.db.backends.postgresql
+DATABASE_NAME=dqujjwbs
+DATABASE_USER=dqujjwbs
+DATABASE_PASSWORD=cNcAl8hezK5NJbL_9QEq1_IOadyexi6g
+DATABASE_HOST=abul.db.elephantsql.com
+DATABASE_PORT=5432
